@@ -8,6 +8,7 @@ BaseBehaviourManager_CommonUpdate_t IL2CPPUnityPlayer::BaseBehaviourManager_Upda
 BaseBehaviourManager_CommonUpdate_t IL2CPPUnityPlayer::BaseBehaviourManager_FixedUpdate = NULL;
 BaseBehaviourManager_CommonUpdate_t IL2CPPUnityPlayer::BaseBehaviourManager_LateUpdate = NULL;
 GUIManager_DoGUIEvent_t IL2CPPUnityPlayer::GUIManager_DoGUIEvent = NULL;
+EndOfFrameCallbacks_DequeAll_t IL2CPPUnityPlayer::EndOfFrameCallbacks_DequeAll = NULL;
 
 bool IL2CPPUnityPlayer::Setup()
 {
@@ -53,6 +54,10 @@ bool IL2CPPUnityPlayer::Setup()
 	if (GUIManager_DoGUIEvent == NULL)
 		GUIManager_DoGUIEvent = (GUIManager_DoGUIEvent_t)PointerUtils::FindPattern(Module, "44 88 44 24 ? 48 89 54 24 ? 48 89 4C 24 ? 55 53 56 57 41 54 41 55 41 56 41 57 48 8D 6C 24 ? 48 81 EC ? ? ? ? 48 63 5A 34 48 8D 05 ? ? ? ? 48 8B F2 89 5C 24 58 4C 8B");
 	AssertionManager::Decide(GUIManager_DoGUIEvent, "GUIManager_DoGUIEvent");
+
+	if (EndOfFrameCallbacks_DequeAll == NULL)
+		EndOfFrameCallbacks_DequeAll = (EndOfFrameCallbacks_DequeAll_t)PointerUtils::FindPattern(Module, "40 57 48 83 EC 20 48 8B 0D ? ? ? ? 48 63 01 48 8B 7C C1 ? 48 8B CF E8 ? ? ? ? 85 C0 75 ? 48 89 5C 24 ? 48 8B CF E8 ? ? ? ? 48 8B D8 48 8B");
+	AssertionManager::Decide(EndOfFrameCallbacks_DequeAll, "EndOfFrameCallbacks_DequeAll");
 
 	return !AssertionManager::Result;
 }
