@@ -11,6 +11,7 @@ MonoMethod* ModHandler::onFixedUpdate = NULL;
 MonoMethod* ModHandler::onLateUpdate = NULL;
 MonoMethod* ModHandler::onGUI = NULL;
 MonoMethod* ModHandler::onApplicationQuit = NULL;
+MonoMethod* ModHandler::melonCoroutines_ProcessWaitForEndOfFrame = NULL;
 
 void ModHandler::Initialize()
 {
@@ -22,15 +23,15 @@ void ModHandler::Initialize()
 	{
 		std::string modhandlerpath = std::string(MelonLoader::GamePath) + "\\MelonLoader\\MelonLoader.ModHandler" + (Is35 ? "_3.5" : "") + ".dll";
 		MonoAssembly* assembly = Mono::mono_domain_assembly_open(Mono::Domain, modhandlerpath.c_str());
-		AssertionManager::Decide(assembly, "assembly");
+		AssertionManager::Decide(assembly, (std::string("MelonLoader.ModHandler") + (Is35 ? "_3.5" : "") + ".dll").c_str());
 		if (assembly != NULL)
 		{
 			MonoImage* image = Mono::mono_assembly_get_image(assembly);
-			AssertionManager::Decide(assembly, "image");
+			AssertionManager::Decide(assembly, "Image");
 			if (image != NULL)
 			{
 				MonoClass* klass = Mono::mono_class_from_name(image, "MelonLoader", "Main");
-				AssertionManager::Decide(assembly, "klass");
+				AssertionManager::Decide(assembly, "MelonLoader.Main");
 				if (klass != NULL)
 				{
 					onUpdate = Mono::mono_class_get_method_from_name(klass, "OnUpdate", NULL);
@@ -52,11 +53,20 @@ void ModHandler::Initialize()
 					AssertionManager::Decide(initialize, "Initialize");
 					if (initialize != NULL)
 						Mono::mono_runtime_invoke(initialize, NULL, NULL, NULL);
+
+					klass = Mono::mono_class_from_name(image, "MelonLoader", "MelonCoroutines");
+					AssertionManager::Decide(assembly, "MelonLoader.MelonCoroutines");
+					if (klass != NULL)
+					{
+						melonCoroutines_ProcessWaitForEndOfFrame = Mono::mono_class_get_method_from_name(klass, "ProcessWaitForEndOfFrame", NULL);
+						AssertionManager::Decide(melonCoroutines_ProcessWaitForEndOfFrame, "ProcessWaitForEndOfFrame");
+					}
 				}
 			}
 		}
 	}
 }
+
 void ModHandler::OnUpdate()
 {
 	if (onUpdate != NULL)
@@ -85,4 +95,10 @@ void ModHandler::OnApplicationQuit()
 {
 	if (onApplicationQuit != NULL)
 		Mono::mono_runtime_invoke(onApplicationQuit, NULL, NULL, NULL);
+}
+
+void ModHandler::MelonCoroutines_ProcessWaitForEndOfFrame()
+{
+	if (melonCoroutines_ProcessWaitForEndOfFrame != NULL)
+		Mono::mono_runtime_invoke(melonCoroutines_ProcessWaitForEndOfFrame, NULL, NULL, NULL);
 }
