@@ -10,12 +10,13 @@ public:
 	static MonoMethod* onLateUpdate;
 	static MonoMethod* onGUI;
 	static MonoMethod* onApplicationQuit;
+	static MonoMethod* melonCoroutines_ProcessWaitForEndOfFrame;
 	
 	static void Initialize();
-	static void OnLevelWasLoaded(int level);
 	static void OnUpdate();
 	static void OnFixedUpdate();
 	static void OnLateUpdate();
 	static void OnGUI();
 	static void OnApplicationQuit();
+	static void MelonCoroutines_ProcessWaitForEndOfFrame();
 };
